# tcr_service

./: .env.example  .gitignore  BUGS.md  DATA.md  DATA_FLOW.md  LICENSE  NOTES.md  README.md  SKELETON_NOTES.md  config.json  dev_server.sh  main.py  pyproject.toml
.claude/: settings.json  settings.local.json.tmp.555516.bb129682082d  settings.local.json.tmp.555516.bbd624831c5a  settings.local.json.tmp.555516.db06235174f4  settings.local.json.tmp.555516.f702a4ef8a83  settings.local.json.tmp.555516.fd546a3e2a0d
briefs/residue_contacts/: BRIEF.md
data/: README.md  class_i_annotation.csv  clonotypes.parquet  clonotypes_index.json  pdbe_publications.json  tcrs.parquet  tcrs_index.json
data/_tooling/: epitope_colours.py
data/clonotype/: CL001.json  CL002.json  CL003.json  CL004.json  CL005.json  CL006.json  CL007.json  CL008.json  CL009.json  CL010.json  CL011.json  CL012.json  CL013.json  CL014.json  CL015.json  CL016.json  CL017.json  (+116 more)
functions/: annotations.py  com_distribution.py  common.py  coordinates.py  decorators.py  interface.py  publications.py  residues.py  slugs.py  templating.py  variability.py
handlers/: __init__.py  clonotypes.py  structures.py  tcrs.py
models/: clonotypes.py  model.py  structures.py  tcrs.py
molstar-src/: empty.js  entry.js  package.json
static/: chord.js  com_mini.js  com_scope.js  explore.js  interface_matrix.js  overlay.js  selection.js  sequence.js  share.js  tcr_matrix.js  viewer.js
templates/: clonotype_overview.html  clonotypes_index.html  structure_overview.html  tcr_overview.html  tcrs_explore.html  tcrs_index.html
(+356 files in other folders)
